pseudocode_lang_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> <empty>
Rule 3     statement -> expression END_STMT
Rule 4     statement -> return_state END_STMT
Rule 5     statement -> if_state
Rule 6     statement -> if_else_state
Rule 7     statement -> while_state
Rule 8     statement -> for_state
Rule 9     statement -> CONTINUE END_STMT
Rule 10    statement -> expression ASSIGN expression END_STMT
Rule 11    statement -> expression ADD_ASSIGN expression END_STMT
Rule 12    statement -> expression MINUS_ASSIGN expression END_STMT
Rule 13    statement -> expression DIVIDE_ASSIGN expression END_STMT
Rule 14    statement -> expression MULT_ASSIGN expression END_STMT
Rule 15    statement -> expression AND_ASSIGN expression END_STMT
Rule 16    return_state -> RETURN expression
Rule 17    for_state -> FOR ID IN expression block
Rule 18    for_state -> FOR statement statement statement block
Rule 19    while_state -> WHILE expression block
Rule 20    if_state -> IF expression block
Rule 21    if_else_state -> IF expression block else_state
Rule 22    else_state -> ELSE_IF expression block else_state
Rule 23    else_state -> ELSE block
Rule 24    else_state -> ELSE_IF expression block
Rule 25    block -> OPEN_CURL statements CLOSE_CURL
Rule 26    function_call -> ID OPEN_BRACKET arg_list CLOSE_BRACKET
Rule 27    function_call -> ID OPEN_BRACKET CLOSE_BRACKET
Rule 28    arg_list -> expression COMMA arg_list
Rule 29    arg_list -> expression
Rule 30    expression -> expression MULTIPLY expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression GTEQ expression
Rule 35    expression -> expression LTEQ expression
Rule 36    expression -> expression LESS_THAN expression
Rule 37    expression -> expression MORE_THAN expression
Rule 38    expression -> expression EQUAL_EQUAL expression
Rule 39    expression -> expression NOT_EQUAL expression
Rule 40    expression -> expression AND expression
Rule 41    expression -> expression OR expression
Rule 42    expression -> expression PERCENT expression
Rule 43    expression -> value
Rule 44    expression -> expression DOT function_call
Rule 45    expression -> expression OPEN_SQUARE expression CLOSE_SQUARE
Rule 46    expression -> PLUS_PLUS expression
Rule 47    expression -> MINUS_MINUS expression
Rule 48    expression -> expression PLUS_PLUS
Rule 49    expression -> expression MINUS_MINUS
Rule 50    expression -> MINUS expression
Rule 51    expression -> expression OPEN_SQUARE expression COLON expression CLOSE_SQUARE
Rule 52    value -> OPEN_BRACKET expression CLOSE_BRACKET
Rule 53    value -> INT
Rule 54    value -> FLOAT
Rule 55    value -> ID
Rule 56    value -> function_call
Rule 57    value -> STRING_CONST
Rule 58    value -> TRUE
Rule 59    value -> FALSE
Rule 60    value -> empty_list
Rule 61    empty_list -> OPEN_SQUARE CLOSE_SQUARE

Terminals, with rules where they appear

ADD_ASSIGN           : 11
AND                  : 40
AND_ASSIGN           : 15
ASSIGN               : 10
CLOSE_BRACKET        : 26 27 52
CLOSE_CURL           : 25
CLOSE_SQUARE         : 45 51 61
COLON                : 51
COMMA                : 28
CONTINUE             : 9
DIVIDE               : 31
DIVIDE_ASSIGN        : 13
DOT                  : 44
ELSE                 : 23
ELSE_IF              : 22 24
END_STMT             : 3 4 9 10 11 12 13 14 15
EQUAL_EQUAL          : 38
FALSE                : 59
FLOAT                : 54
FOR                  : 17 18
GTEQ                 : 34
ID                   : 17 26 27 55
IF                   : 20 21
IN                   : 17
INT                  : 53
LESS_THAN            : 36
LTEQ                 : 35
MINUS                : 33 50
MINUS_ASSIGN         : 12
MINUS_MINUS          : 47 49
MORE_THAN            : 37
MULTIPLY             : 30
MULT_ASSIGN          : 14
NOT_EQUAL            : 39
OPEN_BRACKET         : 26 27 52
OPEN_CURL            : 25
OPEN_SQUARE          : 45 51 61
OR                   : 41
PERCENT              : 42
PLUS                 : 32
PLUS_PLUS            : 46 48
RETURN               : 16
STRING_CONST         : 57
TRUE                 : 58
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

arg_list             : 26 28
block                : 17 18 19 20 21 22 23 24
else_state           : 21 22
empty_list           : 60
expression           : 3 10 10 11 11 12 12 13 13 14 14 15 15 16 17 19 20 21 22 24 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 44 45 45 46 47 48 49 50 51 51 51 52
for_state            : 8
function_call        : 44 56
if_else_state        : 6
if_state             : 5
return_state         : 4
statement            : 1 18 18 18
statements           : 1 25 0
value                : 43
while_state          : 7

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> .

    CONTINUE        reduce using rule 2 (statements -> .)
    PLUS_PLUS       reduce using rule 2 (statements -> .)
    MINUS_MINUS     reduce using rule 2 (statements -> .)
    MINUS           reduce using rule 2 (statements -> .)
    RETURN          reduce using rule 2 (statements -> .)
    IF              reduce using rule 2 (statements -> .)
    WHILE           reduce using rule 2 (statements -> .)
    FOR             reduce using rule 2 (statements -> .)
    OPEN_BRACKET    reduce using rule 2 (statements -> .)
    INT             reduce using rule 2 (statements -> .)
    FLOAT           reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    STRING_CONST    reduce using rule 2 (statements -> .)
    TRUE            reduce using rule 2 (statements -> .)
    FALSE           reduce using rule 2 (statements -> .)
    OPEN_SQUARE     reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    statements                     shift and go to state 1

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . expression END_STMT
    (4) statement -> . return_state END_STMT
    (5) statement -> . if_state
    (6) statement -> . if_else_state
    (7) statement -> . while_state
    (8) statement -> . for_state
    (9) statement -> . CONTINUE END_STMT
    (10) statement -> . expression ASSIGN expression END_STMT
    (11) statement -> . expression ADD_ASSIGN expression END_STMT
    (12) statement -> . expression MINUS_ASSIGN expression END_STMT
    (13) statement -> . expression DIVIDE_ASSIGN expression END_STMT
    (14) statement -> . expression MULT_ASSIGN expression END_STMT
    (15) statement -> . expression AND_ASSIGN expression END_STMT
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression GTEQ expression
    (35) expression -> . expression LTEQ expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression MORE_THAN expression
    (38) expression -> . expression EQUAL_EQUAL expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression PERCENT expression
    (43) expression -> . value
    (44) expression -> . expression DOT function_call
    (45) expression -> . expression OPEN_SQUARE expression CLOSE_SQUARE
    (46) expression -> . PLUS_PLUS expression
    (47) expression -> . MINUS_MINUS expression
    (48) expression -> . expression PLUS_PLUS
    (49) expression -> . expression MINUS_MINUS
    (50) expression -> . MINUS expression
    (51) expression -> . expression OPEN_SQUARE expression COLON expression CLOSE_SQUARE
    (16) return_state -> . RETURN expression
    (20) if_state -> . IF expression block
    (21) if_else_state -> . IF expression block else_state
    (19) while_state -> . WHILE expression block
    (17) for_state -> . FOR ID IN expression block
    (18) for_state -> . FOR statement statement statement block
    (52) value -> . OPEN_BRACKET expression CLOSE_BRACKET
    (53) value -> . INT
    (54) value -> . FLOAT
    (55) value -> . ID
    (56) value -> . function_call
    (57) value -> . STRING_CONST
    (58) value -> . TRUE
    (59) value -> . FALSE
    (60) value -> . empty_list
    (26) function_call -> . ID OPEN_BRACKET arg_list CLOSE_BRACKET
    (27) function_call -> . ID OPEN_BRACKET CLOSE_BRACKET
    (61) empty_list -> . OPEN_SQUARE CLOSE_SQUARE

    CONTINUE        shift and go to state 9
    PLUS_PLUS       shift and go to state 14
    MINUS_MINUS     shift and go to state 15
    MINUS           shift and go to state 10
    RETURN          shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    OPEN_BRACKET    shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    ID              shift and go to state 20
    STRING_CONST    shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    OPEN_SQUARE     shift and go to state 13

    statement                      shift and go to state 2
    expression                     shift and go to state 3
    return_state                   shift and go to state 4
    if_state                       shift and go to state 5
    if_else_state                  shift and go to state 6
    while_state                    shift and go to state 7
    for_state                      shift and go to state 8
    value                          shift and go to state 11
    function_call                  shift and go to state 12
    empty_list                     shift and go to state 27

state 2

    (1) statements -> statements statement .

    CONTINUE        reduce using rule 1 (statements -> statements statement .)
    PLUS_PLUS       reduce using rule 1 (statements -> statements statement .)
    MINUS_MINUS     reduce using rule 1 (statements -> statements statement .)
    MINUS           reduce using rule 1 (statements -> statements statement .)
    RETURN          reduce using rule 1 (statements -> statements statement .)
    IF              reduce using rule 1 (statements -> statements statement .)
    WHILE           reduce using rule 1 (statements -> statements statement .)
    FOR             reduce using rule 1 (statements -> statements statement .)
    OPEN_BRACKET    reduce using rule 1 (statements -> statements statement .)
    INT             reduce using rule 1 (statements -> statements statement .)
    FLOAT           reduce using rule 1 (statements -> statements statement .)
    ID              reduce using rule 1 (statements -> statements statement .)
    STRING_CONST    reduce using rule 1 (statements -> statements statement .)
    TRUE            reduce using rule 1 (statements -> statements statement .)
    FALSE           reduce using rule 1 (statements -> statements statement .)
    OPEN_SQUARE     reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    CLOSE_CURL      reduce using rule 1 (statements -> statements statement .)


state 3

    (3) statement -> expression . END_STMT
    (10) statement -> expression . ASSIGN expression END_STMT
    (11) statement -> expression . ADD_ASSIGN expression END_STMT
    (12) statement -> expression . MINUS_ASSIGN expression END_STMT
    (13) statement -> expression . DIVIDE_ASSIGN expression END_STMT
    (14) statement -> expression . MULT_ASSIGN expression END_STMT
    (15) statement -> expression . AND_ASSIGN expression END_STMT
    (30) expression -> expression . MULTIPLY expression
    (31) expression -> expression . DIVIDE expression
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . GTEQ expression
    (35) expression -> expression . LTEQ expression
    (36) expression -> expression . LESS_THAN expression
    (37) expression -> expression . MORE_THAN expression
    (38) expression -> expression . EQUAL_EQUAL expression
    (39) expression -> expression . NOT_EQUAL expression
    (40) expression -> expression . AND expression
    (41) expression -> expression . OR expression
    (42) expression -> expression . PERCENT expression
    (44) expression -> expression . DOT function_call
    (45) expression -> expression . OPEN_SQUARE expression CLOSE_SQUARE
    (48) expression -> expression . PLUS_PLUS
    (49) expression -> expression . MINUS_MINUS
    (51) expression -> expression . OPEN_SQUARE expression COLON expression CLOSE_SQUARE

    END_STMT        shift and go to state 28
    ASSIGN          shift and go to state 29
    ADD_ASSIGN      shift and go to state 30
    MINUS_ASSIGN    shift and go to state 31
    DIVIDE_ASSIGN   shift and go to state 32
    MULT_ASSIGN     shift and go to state 33
    AND_ASSIGN      shift and go to state 34
    MULTIPLY        shift and go to state 35
    DIVIDE          shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    GTEQ            shift and go to state 39
    LTEQ            shift and go to state 40
    LESS_THAN       shift and go to state 41
    MORE_THAN       shift and go to state 42
    EQUAL_EQUAL     shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46
    PERCENT         shift and go to state 47
    DOT             shift and go to state 48
    OPEN_SQUARE     shift and go to state 49
    PLUS_PLUS       shift and go to state 50
    MINUS_MINUS     shift and go to state 51


state 4

    (4) statement -> return_state . END_STMT

    END_STMT        shift and go to state 52


state 5

    (5) statement -> if_state .

    CONTINUE        reduce using rule 5 (statement -> if_state .)
    PLUS_PLUS       reduce using rule 5 (statement -> if_state .)
    MINUS_MINUS     reduce using rule 5 (statement -> if_state .)
    MINUS           reduce using rule 5 (statement -> if_state .)
    RETURN          reduce using rule 5 (statement -> if_state .)
    IF              reduce using rule 5 (statement -> if_state .)
    WHILE           reduce using rule 5 (statement -> if_state .)
    FOR             reduce using rule 5 (statement -> if_state .)
    OPEN_BRACKET    reduce using rule 5 (statement -> if_state .)
    INT             reduce using rule 5 (statement -> if_state .)
    FLOAT           reduce using rule 5 (statement -> if_state .)
    ID              reduce using rule 5 (statement -> if_state .)
    STRING_CONST    reduce using rule 5 (statement -> if_state .)
    TRUE            reduce using rule 5 (statement -> if_state .)
    FALSE           reduce using rule 5 (statement -> if_state .)
    OPEN_SQUARE     reduce using rule 5 (statement -> if_state .)
    $end            reduce using rule 5 (statement -> if_state .)
    OPEN_CURL       reduce using rule 5 (statement -> if_state .)
    CLOSE_CURL      reduce using rule 5 (statement -> if_state .)


state 6

    (6) statement -> if_else_state .

    CONTINUE        reduce using rule 6 (statement -> if_else_state .)
    PLUS_PLUS       reduce using rule 6 (statement -> if_else_state .)
    MINUS_MINUS     reduce using rule 6 (statement -> if_else_state .)
    MINUS           reduce using rule 6 (statement -> if_else_state .)
    RETURN          reduce using rule 6 (statement -> if_else_state .)
    IF              reduce using rule 6 (statement -> if_else_state .)
    WHILE           reduce using rule 6 (statement -> if_else_state .)
    FOR             reduce using rule 6 (statement -> if_else_state .)
    OPEN_BRACKET    reduce using rule 6 (statement -> if_else_state .)
    INT             reduce using rule 6 (statement -> if_else_state .)
    FLOAT           reduce using rule 6 (statement -> if_else_state .)
    ID              reduce using rule 6 (statement -> if_else_state .)
    STRING_CONST    reduce using rule 6 (statement -> if_else_state .)
    TRUE            reduce using rule 6 (statement -> if_else_state .)
    FALSE           reduce using rule 6 (statement -> if_else_state .)
    OPEN_SQUARE     reduce using rule 6 (statement -> if_else_state .)
    $end            reduce using rule 6 (statement -> if_else_state .)
    OPEN_CURL       reduce using rule 6 (statement -> if_else_state .)
    CLOSE_CURL      reduce using rule 6 (statement -> if_else_state .)


state 7

    (7) statement -> while_state .

    CONTINUE        reduce using rule 7 (statement -> while_state .)
    PLUS_PLUS       reduce using rule 7 (statement -> while_state .)
    MINUS_MINUS     reduce using rule 7 (statement -> while_state .)
    MINUS           reduce using rule 7 (statement -> while_state .)
    RETURN          reduce using rule 7 (statement -> while_state .)
    IF              reduce using rule 7 (statement -> while_state .)
    WHILE           reduce using rule 7 (statement -> while_state .)
    FOR             reduce using rule 7 (statement -> while_state .)
    OPEN_BRACKET    reduce using rule 7 (statement -> while_state .)
    INT             reduce using rule 7 (statement -> while_state .)
    FLOAT           reduce using rule 7 (statement -> while_state .)
    ID              reduce using rule 7 (statement -> while_state .)
    STRING_CONST    reduce using rule 7 (statement -> while_state .)
    TRUE            reduce using rule 7 (statement -> while_state .)
    FALSE           reduce using rule 7 (statement -> while_state .)
    OPEN_SQUARE     reduce using rule 7 (statement -> while_state .)
    $end            reduce using rule 7 (statement -> while_state .)
    OPEN_CURL       reduce using rule 7 (statement -> while_state .)
    CLOSE_CURL      reduce using rule 7 (statement -> while_state .)


state 8

    (8) statement -> for_state .

    CONTINUE        reduce using rule 8 (statement -> for_state .)
    PLUS_PLUS       reduce using rule 8 (statement -> for_state .)
    MINUS_MINUS     reduce using rule 8 (statement -> for_state .)
    MINUS           reduce using rule 8 (statement -> for_state .)
    RETURN          reduce using rule 8 (statement -> for_state .)
    IF              reduce using rule 8 (statement -> for_state .)
    WHILE           reduce using rule 8 (statement -> for_state .)
    FOR             reduce using rule 8 (statement -> for_state .)
    OPEN_BRACKET    reduce using rule 8 (statement -> for_state .)
    INT             reduce using rule 8 (statement -> for_state .)
    FLOAT           reduce using rule 8 (statement -> for_state .)
    ID              reduce using rule 8 (statement -> for_state .)
    STRING_CONST    reduce using rule 8 (statement -> for_state .)
    TRUE            reduce using rule 8 (statement -> for_state .)
    FALSE           reduce using rule 8 (statement -> for_state .)
    OPEN_SQUARE     reduce using rule 8 (statement -> for_state .)
    $end            reduce using rule 8 (statement -> for_state .)
    OPEN_CURL       reduce using rule 8 (statement -> for_state .)
    CLOSE_CURL      reduce using rule 8 (statement -> for_state .)


state 9

    (9) statement -> CONTINUE . END_STMT

    END_STMT        shift and go to state 53


state 10

    (50) expression -> MINUS . expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression GTEQ expression
    (35) expression -> . expression LTEQ expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression MORE_THAN expression
    (38) expression -> . expression EQUAL_EQUAL expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression PERCENT expression
    (43) expression -> . value
    (44) expression -> . expression DOT function_call
    (45) expression -> . expression OPEN_SQUARE expression CLOSE_SQUARE
    (46) expression -> . PLUS_PLUS expression
    (47) expression -> . MINUS_MINUS expression
    (48) expression -> . expression PLUS_PLUS
    (49) expression -> . expression MINUS_MINUS
    (50) expression -> . MINUS expression
    (51) expression -> . expression OPEN_SQUARE expression COLON expression CLOSE_SQUARE
    (52) value -> . OPEN_BRACKET expression CLOSE_BRACKET
    (53) value -> . INT
    (54) value -> . FLOAT
    (55) value -> . ID
    (56) value -> . function_call
    (57) value -> . STRING_CONST
    (58) value -> . TRUE
    (59) value -> . FALSE
    (60) value -> . empty_list
    (26) function_call -> . ID OPEN_BRACKET arg_list CLOSE_BRACKET
    (27) function_call -> . ID OPEN_BRACKET CLOSE_BRACKET
    (61) empty_list -> . OPEN_SQUARE CLOSE_SQUARE

    PLUS_PLUS       shift and go to state 14
    MINUS_MINUS     shift and go to state 15
    MINUS           shift and go to state 10
    OPEN_BRACKET    shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    ID              shift and go to state 20
    STRING_CONST    shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    OPEN_SQUARE     shift and go to state 13

    expression                     shift and go to state 54
    value                          shift and go to state 11
    function_call                  shift and go to state 12
    empty_list                     shift and go to state 27

state 11

    (43) expression -> value .

    END_STMT        reduce using rule 43 (expression -> value .)
    ASSIGN          reduce using rule 43 (expression -> value .)
    ADD_ASSIGN      reduce using rule 43 (expression -> value .)
    MINUS_ASSIGN    reduce using rule 43 (expression -> value .)
    DIVIDE_ASSIGN   reduce using rule 43 (expression -> value .)
    MULT_ASSIGN     reduce using rule 43 (expression -> value .)
    AND_ASSIGN      reduce using rule 43 (expression -> value .)
    MULTIPLY        reduce using rule 43 (expression -> value .)
    DIVIDE          reduce using rule 43 (expression -> value .)
    PLUS            reduce using rule 43 (expression -> value .)
    MINUS           reduce using rule 43 (expression -> value .)
    GTEQ            reduce using rule 43 (expression -> value .)
    LTEQ            reduce using rule 43 (expression -> value .)
    LESS_THAN       reduce using rule 43 (expression -> value .)
    MORE_THAN       reduce using rule 43 (expression -> value .)
    EQUAL_EQUAL     reduce using rule 43 (expression -> value .)
    NOT_EQUAL       reduce using rule 43 (expression -> value .)
    AND             reduce using rule 43 (expression -> value .)
    OR              reduce using rule 43 (expression -> value .)
    PERCENT         reduce using rule 43 (expression -> value .)
    DOT             reduce using rule 43 (expression -> value .)
    OPEN_SQUARE     reduce using rule 43 (expression -> value .)
    PLUS_PLUS       reduce using rule 43 (expression -> value .)
    MINUS_MINUS     reduce using rule 43 (expression -> value .)
    OPEN_CURL       reduce using rule 43 (expression -> value .)
    CLOSE_BRACKET   reduce using rule 43 (expression -> value .)
    CLOSE_SQUARE    reduce using rule 43 (expression -> value .)
    COLON           reduce using rule 43 (expression -> value .)
    COMMA           reduce using rule 43 (expression -> value .)


state 12

    (56) value -> function_call .

    END_STMT        reduce using rule 56 (value -> function_call .)
    ASSIGN          reduce using rule 56 (value -> function_call .)
    ADD_ASSIGN      reduce using rule 56 (value -> function_call .)
    MINUS_ASSIGN    reduce using rule 56 (value -> function_call .)
    DIVIDE_ASSIGN   reduce using rule 56 (value -> function_call .)
    MULT_ASSIGN     reduce using rule 56 (value -> function_call .)
    AND_ASSIGN      reduce using rule 56 (value -> function_call .)
    MULTIPLY        reduce using rule 56 (value -> function_call .)
    DIVIDE          reduce using rule 56 (value -> function_call .)
    PLUS            reduce using rule 56 (value -> function_call .)
    MINUS           reduce using rule 56 (value -> function_call .)
    GTEQ            reduce using rule 56 (value -> function_call .)
    LTEQ            reduce using rule 56 (value -> function_call .)
    LESS_THAN       reduce using rule 56 (value -> function_call .)
    MORE_THAN       reduce using rule 56 (value -> function_call .)
    EQUAL_EQUAL     reduce using rule 56 (value -> function_call .)
    NOT_EQUAL       reduce using rule 56 (value -> function_call .)
    AND             reduce using rule 56 (value -> function_call .)
    OR              reduce using rule 56 (value -> function_call .)
    PERCENT         reduce using rule 56 (value -> function_call .)
    DOT             reduce using rule 56 (value -> function_call .)
    OPEN_SQUARE     reduce using rule 56 (value -> function_call .)
    PLUS_PLUS       reduce using rule 56 (value -> function_call .)
    MINUS_MINUS     reduce using rule 56 (value -> function_call .)
    OPEN_CURL       reduce using rule 56 (value -> function_call .)
    CLOSE_BRACKET   reduce using rule 56 (value -> function_call .)
    CLOSE_SQUARE    reduce using rule 56 (value -> function_call .)
    COLON           reduce using rule 56 (value -> function_call .)
    COMMA           reduce using rule 56 (value -> function_call .)


state 13

    (61) empty_list -> OPEN_SQUARE . CLOSE_SQUARE

    CLOSE_SQUARE    shift and go to state 55


state 14

    (46) expression -> PLUS_PLUS . expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression GTEQ expression
    (35) expression -> . expression LTEQ expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression MORE_THAN expression
    (38) expression -> . expression EQUAL_EQUAL expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression PERCENT expression
    (43) expression -> . value
    (44) expression -> . expression DOT function_call
    (45) expression -> . expression OPEN_SQUARE expression CLOSE_SQUARE
    (46) expression -> . PLUS_PLUS expression
    (47) expression -> . MINUS_MINUS expression
    (48) expression -> . expression PLUS_PLUS
    (49) expression -> . expression MINUS_MINUS
    (50) expression -> . MINUS expression
    (51) expression -> . expression OPEN_SQUARE expression COLON expression CLOSE_SQUARE
    (52) value -> . OPEN_BRACKET expression CLOSE_BRACKET
    (53) value -> . INT
    (54) value -> . FLOAT
    (55) value -> . ID
    (56) value -> . function_call
    (57) value -> . STRING_CONST
    (58) value -> . TRUE
    (59) value -> . FALSE
    (60) value -> . empty_list
    (26) function_call -> . ID OPEN_BRACKET arg_list CLOSE_BRACKET
    (27) function_call -> . ID OPEN_BRACKET CLOSE_BRACKET
    (61) empty_list -> . OPEN_SQUARE CLOSE_SQUARE

    PLUS_PLUS       shift and go to state 14
    MINUS_MINUS     shift and go to state 15
    MINUS           shift and go to state 10
    OPEN_BRACKET    shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    ID              shift and go to state 20
    STRING_CONST    shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    OPEN_SQUARE     shift and go to state 13

    expression                     shift and go to state 56
    value                          shift and go to state 11
    function_call                  shift and go to state 12
    empty_list                     shift and go to state 27

state 15
